--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Solomon's Portfolio Website</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div id="header" class="div"></div>
+  <div id="header" class="div">
+    <div class="container">
+      <nav>
+        <img src="assets/images/logo_2.png" alt="logo" class="logo">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="header-text">
+        <p>Backend/Cloud Developer</p>
+        <h1>Hi, I'm <span>Solomon</span><br/>from Port Harcourt,<br>
+          Nigeria</h1>
+      </div>
+    </div>
+  </div>
+
+  <!-- -------About------------>
+
+  <div id="about">
+    <div class="container">
+      <div class="row">
+        <div class="about-col-1">
+          <img src="assets/images/user.png" alt="">
+        </div>
+        <div class="about-col-2">
+          <h1>About me</h1>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
