Add services section and Add styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Solomon's Portfolio Website</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/53315bc069.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,6 +17,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -23,7 +25,7 @@
       <div class="header-text">
         <p>Backend/Cloud Developer</p>
         <h1>Hi, I'm <span>Solomon</span><br/>
-          Nigeria</h1>
+        from Nigeria</h1>
       </div>
     </div>
   </div>
@@ -40,7 +42,7 @@
           <h1 class="sub-title">About me</h1>
           <p>
             Solomon Olungweonwi <br />
-            Freelance Cloud Engineer | Architecting Scalable AWS Solutions for SMEs | Backend.
+            Freelance Cloud Engineer | Architecting Scalable AWS Solutions for SMEs | Backend. </br></br>
 
             A passionate cloud advocate with a background in electrical engineering, Solomon specializes in designing secure, cost-optimized AWS infrastructures that help small businesses innovate and scale. His mission: to democratize enterprise-grade cloud tools for startups and SMEs, ensuring they thrive in a competitive digital landscape.
           </p>
@@ -75,6 +77,72 @@
       </div>
     </div>
   </div>
+
+<!-- --------services------- -->
+ <div id="services">
+  <div class="container">
+    <h1 class="sub-title">My Services</h1>
+    <div class="services-list">
+      <div>
+        <i class="fa-solid fa-code"></i>
+        <h2>Custom API Development</h2>
+        <p>Design and build high-performance RESTful and GraphQL APIs tailored to your application’s needs. I ensure seamless communication between frontend and backend systems while prioritizing scalability and maintainability.
+        (Tools: Node.js, Python/Go, Express, FastAPI)</p>
+        <a href="#">Learn more</a>
+      </div>
+
+      <div>
+        <i class="fa-solid fa-database"></i>
+        <h2>Database Architecture & Optimization</h2>
+       <p>Create efficient database schemas, write complex queries, and optimize performance for relational (PostgreSQL, MySQL) and NoSQL (MongoDB, Redis) databases. Includes migration strategies, indexing, and caching solutions.</p>
+        <a href="#">Learn more</a>
+      </div>
+
+      <div>
+        <i class="fa-solid fa-cloud"></i>
+        <h2>Cloud-Based Backend Solutions</h2>
+        <p>Deploy and manage scalable backends on cloud platforms (AWS) Services include serverless architecture (Lambda, Cloud Functions), containerization (Docker, Kubernetes), and resource orchestration.</p>
+        <a href="#">Learn more</a>
+      </div>
+
+      <div>
+        <i class="fa-solid fa-gears"></i>
+        <h2>Microservices & System Design</h2>
+        <p>Architect modular, decoupled systems using microservices or monolithic patterns based on your project’s scale. Focus on fault tolerance, load balancing, and inter-service communication.</p>
+        <a href="#">Learn more</a>
+      </div>
+
+      <div>
+        <i class="fa-solid fa-lock"></i>
+        <h2>Authentication & Security</h2>
+        <p>Implement secure user authentication (OAuth, JWT), role-based access control (RBAC), and data encryption. I prioritize compliance with security best practices to protect sensitive data.</p>
+        <a href="#">Learn more</a>
+      </div>
+
+      <div>
+        <i class="fa-solid fa-code-compare"></i>
+        <h2>DevOps & CI/CD Pipelines</h2>
+        <p>Streamline development workflows with automated testing, continuous integration, and deployment pipelines (GitHub Actions, Jenkins). Includes monitoring (Prometheus, Grafana) and logging solutions.</p>
+        <a href="#">Learn more</a>
+      </div>
+
+      <div>
+        <i class="fa-solid fa-gauge"></i>
+        <h2>Performance Optimization</h2>
+        <p>Identify and resolve bottlenecks in APIs, databases, and infrastructure. Conduct load testing, query optimization, and caching strategies to ensure lightning-fast response times.</p>
+        <a href="#">Learn more</a>
+      </div>
+
+      <div>
+        <i class="fa-solid fa-credit-card"></i>
+        <h2>Third-Party Integrations</h2>
+        <p>Connect your app with payment gateways (Stripe, PayPal), SMTP services, analytics tools, or external APIs (Google Maps, social platforms) for enhanced functionality.</p>
+        <a href="#">Learn more</a>
+      </div>
+
+    </div>
+  </div>
+ </div>
 
   <script>
     var tablinks = document.getElementsByClassName("tab-links");
