Add portfolio section and change profile image.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </nav>
       <div class="header-text">
         <p>Backend/Cloud Developer</p>
-        <h1>Hi, I'm <span>Solomon</span><br/>
-        from Nigeria</h1>
+        <h1>Hi, I'm <span>Solomon</span><br />
+          from Nigeria</h1>
       </div>
     </div>
   </div>
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="row">
         <div class="about-col-1">
-          <img src="assets/images/user.png" alt="">
+          <img src="assets/images/Professional_Photo.png" alt="">
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">About me</h1>
@@ -44,7 +44,10 @@
             Solomon Olungweonwi <br />
             Freelance Cloud Engineer | Architecting Scalable AWS Solutions for SMEs | Backend. </br></br>
 
-            A passionate cloud advocate with a background in electrical engineering, Solomon specializes in designing secure, cost-optimized AWS infrastructures that help small businesses innovate and scale. His mission: to democratize enterprise-grade cloud tools for startups and SMEs, ensuring they thrive in a competitive digital landscape.
+            A passionate cloud advocate with a background in electrical engineering, Solomon specializes in designing
+            secure, cost-optimized AWS infrastructures that help small businesses innovate and scale. His mission: to
+            democratize enterprise-grade cloud tools for startups and SMEs, ensuring they thrive in a competitive
+            digital landscape.
           </p>
 
           <div class="tab-titles">
@@ -62,7 +65,8 @@
           <div class="tab-contents" id="experience">
             <ul>
               <li><span>2023 - 2025</span><br>Software engineeering Training at African Leadership Xcelerator, ALX.</li>
-              <li><span>2025 - present</span><br>Backend Developer for an online music school(Ninoproductionz), building the backend and Database for their learning Platform.</li>
+              <li><span>2025 - present</span><br>Backend Developer for an online music school(Ninoproductionz), building
+                the backend and Database for their learning Platform.</li>
               <li><span>2025-present</span><br>Internship at HNG Empowering Tech</li>
             </ul>
           </div>
@@ -78,87 +82,129 @@
     </div>
   </div>
 
-<!-- --------services------- -->
- <div id="services">
-  <div class="container">
-    <h1 class="sub-title">My Services</h1>
-    <div class="services-list">
-      <div>
-        <i class="fa-solid fa-code"></i>
-        <h2>Custom API Development</h2>
-        <p>Design and build high-performance RESTful and GraphQL APIs tailored to your application’s needs. I ensure seamless communication between frontend and backend systems while prioritizing scalability and maintainability.
-        (Tools: Node.js, Python/Go, Express, FastAPI)</p>
-        <a href="#">Learn more</a>
-      </div>
+  <!-- --------services------- -->
+  <div id="services">
+    <div class="container">
+      <h1 class="sub-title">My Services</h1>
+      <div class="services-list">
+        <div>
+          <i class="fa-solid fa-code"></i>
+          <h2>Custom API Development</h2>
+          <p>Design and build high-performance RESTful and GraphQL APIs tailored to your application’s needs. I ensure
+            seamless communication between frontend and backend systems while prioritizing scalability and
+            maintainability.
+            (Tools: Node.js, Python/Go, Express, FastAPI)</p>
+          <a href="#">Learn more</a>
+        </div>
 
-      <div>
-        <i class="fa-solid fa-database"></i>
-        <h2>Database Architecture & Optimization</h2>
-       <p>Create efficient database schemas, write complex queries, and optimize performance for relational (PostgreSQL, MySQL) and NoSQL (MongoDB, Redis) databases. Includes migration strategies, indexing, and caching solutions.</p>
-        <a href="#">Learn more</a>
-      </div>
+        <div>
+          <i class="fa-solid fa-database"></i>
+          <h2>Database Architecture & Optimization</h2>
+          <p>Create efficient database schemas, write complex queries, and optimize performance for relational
+            (PostgreSQL, MySQL) and NoSQL (MongoDB, Redis) databases. Includes migration strategies, indexing, and
+            caching solutions.</p>
+          <a href="#">Learn more</a>
+        </div>
 
-      <div>
-        <i class="fa-solid fa-cloud"></i>
-        <h2>Cloud-Based Backend Solutions</h2>
-        <p>Deploy and manage scalable backends on cloud platforms (AWS) Services include serverless architecture (Lambda, Cloud Functions), containerization (Docker, Kubernetes), and resource orchestration.</p>
-        <a href="#">Learn more</a>
-      </div>
+        <div>
+          <i class="fa-solid fa-cloud"></i>
+          <h2>Cloud-Based Backend Solutions</h2>
+          <p>Deploy and manage scalable backends on cloud platforms (AWS) Services include serverless architecture
+            (Lambda, Cloud Functions), containerization (Docker, Kubernetes), and resource orchestration.</p>
+          <a href="#">Learn more</a>
+        </div>
 
-      <div>
-        <i class="fa-solid fa-gears"></i>
-        <h2>Microservices & System Design</h2>
-        <p>Architect modular, decoupled systems using microservices or monolithic patterns based on your project’s scale. Focus on fault tolerance, load balancing, and inter-service communication.</p>
-        <a href="#">Learn more</a>
-      </div>
+        <div>
+          <i class="fa-solid fa-gears"></i>
+          <h2>Microservices & System Design</h2>
+          <p>Architect modular, decoupled systems using microservices or monolithic patterns based on your project’s
+            scale. Focus on fault tolerance, load balancing, and inter-service communication.</p>
+          <a href="#">Learn more</a>
+        </div>
 
-      <div>
-        <i class="fa-solid fa-lock"></i>
-        <h2>Authentication & Security</h2>
-        <p>Implement secure user authentication (OAuth, JWT), role-based access control (RBAC), and data encryption. I prioritize compliance with security best practices to protect sensitive data.</p>
-        <a href="#">Learn more</a>
-      </div>
+        <div>
+          <i class="fa-solid fa-lock"></i>
+          <h2>Authentication & Security</h2>
+          <p>Implement secure user authentication (OAuth, JWT), role-based access control (RBAC), and data encryption. I
+            prioritize compliance with security best practices to protect sensitive data.</p>
+          <a href="#">Learn more</a>
+        </div>
 
-      <div>
-        <i class="fa-solid fa-code-compare"></i>
-        <h2>DevOps & CI/CD Pipelines</h2>
-        <p>Streamline development workflows with automated testing, continuous integration, and deployment pipelines (GitHub Actions, Jenkins). Includes monitoring (Prometheus, Grafana) and logging solutions.</p>
-        <a href="#">Learn more</a>
-      </div>
+        <div>
+          <i class="fa-solid fa-code-compare"></i>
+          <h2>DevOps & CI/CD Pipelines</h2>
+          <p>Streamline development workflows with automated testing, continuous integration, and deployment pipelines
+            (GitHub Actions, Jenkins). Includes monitoring (Prometheus, Grafana) and logging solutions.</p>
+          <a href="#">Learn more</a>
+        </div>
 
-      <div>
-        <i class="fa-solid fa-gauge"></i>
-        <h2>Performance Optimization</h2>
-        <p>Identify and resolve bottlenecks in APIs, databases, and infrastructure. Conduct load testing, query optimization, and caching strategies to ensure lightning-fast response times.</p>
-        <a href="#">Learn more</a>
-      </div>
+        <div>
+          <i class="fa-solid fa-gauge"></i>
+          <h2>Performance Optimization</h2>
+          <p>Identify and resolve bottlenecks in APIs, databases, and infrastructure. Conduct load testing, query
+            optimization, and caching strategies to ensure lightning-fast response times.</p>
+          <a href="#">Learn more</a>
+        </div>
 
-      <div>
-        <i class="fa-solid fa-credit-card"></i>
-        <h2>Third-Party Integrations</h2>
-        <p>Connect your app with payment gateways (Stripe, PayPal), SMTP services, analytics tools, or external APIs (Google Maps, social platforms) for enhanced functionality.</p>
-        <a href="#">Learn more</a>
-      </div>
+        <div>
+          <i class="fa-solid fa-credit-card"></i>
+          <h2>Third-Party Integrations</h2>
+          <p>Connect your app with payment gateways (Stripe, PayPal), SMTP services, analytics tools, or external APIs
+            (Google Maps, social platforms) for enhanced functionality.</p>
+          <a href="#">Learn more</a>
+        </div>
 
+      </div>
     </div>
+  </div>
+
+  <!-- -------------Portfolio------------- -->
+
+ <div id="portfolio">
+  <div class="container">
+    <h1 class="sub-title">My Projects</h1>
+    <div class="work-list">
+      <div class="work">
+        <img src="assets/images/work-1.png" alt="">
+        <div class="layer">
+          <h3>Openlinks: E-commerce website</h3>
+          <p>
+            This Website lets you shop for different brand of laptops and also makes delivery within 2 days possible instead of long wait times for people in Nigeria
+          </p>
+          <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="assets/images/work-2.png" alt="">
+        <div class="layer">
+          <h3>TaskSimplify: A modern To-do list Website</h3>
+          <p>
+            A modern to-do list webapp that makes it easier to plan your tasks with reminders including custom emails and milestones that tracks your progress.
+          </p>
+          <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="assets/images/work-3.png" alt="">
+        <div class="layer">
+          <h3>PlayLike-A-Pro</h3> 
+          <p>
+           A music website that teaches you how to play the piano with lessons personalized to each student and hosted on the cloud
+          </p>
+          <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+      </div>
+    </div>
+    <a href="#" class="btn">See more</a>
   </div>
  </div>
 
   <script>
-    var tablinks = document.getElementsByClassName("tab-links");
-    var tabcontents = document.getElementsByClassName("tab-contents");
-   
-    function opentab(tabname){
-      for(tablink of tablinks){
-        tablink.classList.remove("active-link");
-      }
-      for(tabcontent of tabcontents){
-        tabcontent.classList.remove("active-tab");
-      }
-      event.currentTarget.classList.add("active-link");
-      document.getElementById(tabname).classList.add("active-tab");
-    }
-    </script>
+    var tablinks = document.getElementsByClassName(" tab-links"); var
+            tabcontents=document.getElementsByClassName("tab-contents"); function opentab(tabname){ for(tablink of
+            tablinks){ tablink.classList.remove("active-link"); } for(tabcontent of tabcontents){
+            tabcontent.classList.remove("active-tab"); } event.currentTarget.classList.add("active-link");
+            document.getElementById(tabname).classList.add("active-tab"); } </script>
 </body>
 
 </html>
